--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <title>개인포트폴리오</title>
+    <meta name="description" content="프론트엔드 개발자 이철욱 포트폴리오 입니다.">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/motion.js"></script>
