--- a/index.html
+++ b/index.html
@@ -178,12 +178,6 @@
                 <div class="job_chart">
                     <ul>
                         <li>
-                            <p>PHOTOSHOP</p>
-                        </li>
-                        <li>
-                            <p>ILLUSTRATOR</p>
-                        </li>
-                        <li>
                             <p>HTML</p>
                         </li>
                         <li>
@@ -192,27 +186,14 @@
                         <li>
                             <p>JAVASCRIPT</p>
                         </li>
+                        <li>
+                            <p>VUE.JS</p>
+                        </li>
                     </ul>
                 </div>
                 
                 <div class="job_info">
                     <ul>
-                        <li>
-                            <p><b>PHOTOSHOP</b></p>
-                            <p>
-                                이미지 편집, 보정, 프로토타입 제작,<br>
-                                GUI 구성요소 제작관련 툴 사용<br>
-                                능숙하게 처리
-                            </p>
-                        </li>
-                        <li>
-                            <p><b>ILLUSTRATOR</b></p>
-                            <p>
-                                다이어그램, 아이콘 요소를 픽토그램 수준으로<br>
-                                설계하여 통일감 있는 시각화<br>
-                                결과물로 제작 가능
-                            </p>
-                        </li>    
                         <li>
                             <p><b>HTML</b></p>
                             <p>
@@ -236,7 +217,14 @@
                                 원리를 기반으로 문법에 대입하여<br>
                                 필요한 모션을 구현 
                             </p>
-                        </li>    
+                        </li><li>
+                            <p><b>VUE.JS</b></p>
+                            <p>
+                                이미지 편집, 보정, 프로토타입 제작,<br>
+                                GUI 구성요소 제작관련 툴 사용<br>
+                                능숙하게 처리
+                            </p>
+                        </li>
                     </ul>
                 </div>
                 
