--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="intro_wrap">
                 <h2>main visual</h2>
 
-                <p class="typing-txt">웹 퍼블리셔, 이 철 욱 입니다.</p>
+                <p class="typing-txt">디자인을 코드로 표현하는 웹 퍼블리셔 이철욱 입니다.</p>
                 <p class="typing"></p>
                 
             </div>
