--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
         <div class="header_wrap"> 
             <h1><a href="index.html">CHEOLUK<!-- <img src="images/logo.png" alt="로고"> --></a></h1>
-            <p class="nav_btn"><button><i class="fa-solid fa-bars"></i></button></p>
+            <p class="nav_btn"><button><img src="images/btn_menu.png" alt="모바일, 태블릿 메뉴버튼"></img></button></p>
             <nav>
                 <p class="nav_close_btn"><button><img src="images/nav_close_btn.png" alt="닫기버튼"></button></p>
                 <ul class="gnb">
@@ -60,7 +60,6 @@
                         Welcome to my homepage.
                     </span>
                 </p>
-                <p class="typing"></p>
             </div>
         </section>
 
@@ -131,19 +130,19 @@
                         <h3>ABOUT</h3>
                         <dl>
                             <dt>
-                                Date Of Birth :
+                                Date Of Birth
                             </dt>
                             <dd>
                                 1996.11.19
                             </dd>
                             <dt>
-                                Tell :
+                                Tell
                             </dt>
                             <dd>
                                 010-5701-1119
                             </dd>
                             <dt>
-                                E-mail :
+                                E-mail
                             </dt>
                             <dd>
                                 cheoluk96@hanmail.net
@@ -158,22 +157,6 @@
         <section class="job">
             <div class="job_wrap">
                 <h2>SKILLS</h2> 
-                <!-- <div class="job_chart">
-                    <ul>
-                        <li>
-                            <p>HTML</p>
-                        </li>
-                        <li>
-                            <p>CSS</p>
-                        </li>
-                        <li>
-                            <p>JAVASCRIPT</p>
-                        </li>
-                        <li>
-                            <p>VUE.JS</p>
-                        </li>
-                    </ul>
-                </div> -->
                 
                 <div class="job_info">
                     <ul>
