모바일 수정 2

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="contact_wrap">
                 <h2>
                     CONTACT
-                    <p>언제든지 연락주세요<br></p>
+                    <p>언제든지 연락주세요</p>
                 </h2>
                 
                 <ul class="contact_info">
