태블릿 수정

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
                 <p class="typing-txt">
                     <span>
-                        디자인을<br>코드로 표현하는
+                        디자인을 <br>코드로 표현하는
                     </span>
                     <br>
                     <span>
-                        웹 퍼블리셔<br>이철욱 입니다.
+                        웹 퍼블리셔 <br>이철욱 입니다.
                     </span>
                     <br><br>
                     <span>
@@ -363,11 +363,11 @@
                     </li>
                     <li class="email">
                         <p>E-MAIL</p>
-                        <p>cheoluk96@hanmail.net</p>
+                        <a href="mailto:cheoluk96@hanmail.net"><p>cheoluk96@hanmail.net</p></a>
                     </li>
                     <li class="website">
-                        <p>WEB SITE</p>
-                        <p>cheoluk.github.io</p>
+                        <p>GITHUB</p>
+                        <a href="https://github.com/cheoluk" target="_blank"><p>github.com/cheoluk</p></a>
                     </li>
                 </ul>
             </div>
